# Agent-Bridge-Module

./: .env.example  .gitignore  AGENTS.md  CODEX_START_HERE.md  README.md  pyproject.toml
agent_bridge/: cli.py  orchestrator.py
agent_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: default.yaml
docs/: 00_PROJECT_BRIEF.md  01_ARCHITECTURE.md  02_PORTABLE_MODULE_DESIGN.md  03_IMPLEMENTATION_PLAN.md  04_DETAILED_TODO.md  05_SELF_TEST_AND_DOGFOOD_PROTOCOL.md  06_SAFETY_AND_APPROVAL_GATES.md  07_CLI_SPEC.md  08_CODEX_MASTER_PROMPT.md  EXTERNAL_GUI_RUNNER.md  LIVE_SAFE_PR_DOGFOOD.md  agent-bridge-dogfood-test.md
fixtures/: fake_agent_report.md  fake_ci_failure.json  fake_github_review.json  fake_pm_response.md  fake_review_digest.md  risky_pm_response.md
portable_module/: AGENTS.agent-bridge.snippet.md
scripts/: run_bridge.sh  run_gui_roundtrip_external.sh  self_test.sh  start_external_gui_runner.sh  start_iterm_ghost_runner.sh  status_external_gui_runner.sh  status_iterm_ghost_runner.sh  stop_external_gui_runner.sh  stop_iterm_ghost_runner.sh
tests/: test_asset_state_machine.py  test_chatgpt_mac_composer.py  test_chatgpt_mac_response_capture.py  test_chatgpt_state_machine.py  test_codex_ui_detector.py  test_command_queue.py  test_computer_use_trigger.py  test_digest_builder.py  test_dispatcher.py  test_external_runner.py  test_external_runner_daemon.py  test_file_based_watchers.py  test_foreground_bridge_runner.py  test_gh_client.py  test_gh_dogfood.py  test_gh_watchers.py  test_gui_activation.py  test_pm_backend.py  (+20 more)
(+103 files in other folders)
