[project]
name = "agent-bridge"
version = "0.2.0"
description = "Portable PM-to-local-coding-agent automation bridge."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]
gui = [
  "pyautogui>=0.9.54"
]

[project.scripts]
agent-bridge = "agent_bridge.cli:app"

[tool.setuptools.packages.find]
include = ["agent_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
